# openenclave

./: .gitattributes
.jenkins/: Jenkinsfile
debugger/debugrt/host/: host.c
debugger/pythonExtension/: gdb_sgx_plugin.py
docs/DesignDocs/: Enabledebugmallocbydefault.md
docs/GettingStartedDocs/Contributors/: WindowsSGX1FLCGettingStarted.md
enclave/: link.c
enclave/core/: CMakeLists.txt  __stack_chk_fail.c  debugmalloc.c  debugmalloc.h  debugmalloc_helper.h  dmtoggle.c  malloc.c  malloctoggle.c  nodebugmalloc.c
enclave/core/sgx/: asmdefs.h  calls.c  enter.S  eresume_sim.c  exception.c  exception_sim.c  exit.S  properties.c  td.c  thread.c
host/: CMakeLists.txt  README.md  dupenv.c  tests.c  traceh.c
host/linux/: time.c
host/measure/: CMakeLists.txt
host/sgx/: calls.c  create.c  enclave.h  enter.c  exception.c  exception.h  exception_sim.c  loadelf.c  ocalls.c  sgxload.c  sgxload2.c  sgxsign.c
host/sgx/linux/: enter.S  exception.c
host/sgx/windows/: exception.c
host/windows/: dirent.c  dirent.h  syscall.c
include/: CMakeLists.txt
include/openenclave/: debugmalloc.h  trace.h
include/openenclave/advanced/: debugmalloc.h  malloctoggle.h
include/openenclave/internal/: time.h  (+4 more)
libc/: pthread.c
pkgconfig/: CMakeLists.txt
samples/: CMakeLists.txt  test-samples.cmake
scripts/: .check-license.ignore
tests/: CMakeLists.txt
tests/abortStatus/: CMakeLists.txt
tests/cppException/: CMakeLists.txt
tests/cppException/host/: host.cpp
tests/print/: CMakeLists.txt
tests/ssp/: ssp.edl
tests/syscall/: CMakeLists.txt
tools/oesign/: oesign.c
(+31 files in other folders)
